mac stuff + nvim

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,7 +23,7 @@ font_family      Fira Code Retina
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 18.0
 
 #: Font size (in pts)
 
@@ -674,7 +674,7 @@ tab_bar_background #222
 #: you are probably better off just hiding the titlebar with
 #: hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt left
 
 #: Use the option key as an alt key. With this set to no, kitty will
 #: use the macOS native Option+Key = unicode character behavior. This
@@ -1084,3 +1084,5 @@ include ~/.config/kitty/kitty-themes/themes/Monokai_Soda.conf
 
 map kitty_mod+t new_tab_with_cwd
 map kitty_mod+enter new_window_with_cwd
+map cmd+t new_tab_with_cwd
+map cmd+enter new_window_with_cwd
