delta pager for git, CoC change, kitty confirm on close, pipx path

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,4 +1,3 @@
-# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
 #: Fonts {{{
 
@@ -1108,3 +1107,4 @@ map kitty_mod+t new_tab_with_cwd
 map kitty_mod+enter new_window_with_cwd
 map cmd+t new_tab_with_cwd
 map cmd+enter new_window_with_cwd
+confirm_os_window_close 1
