--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1108,3 +1108,5 @@ map kitty_mod+enter new_window_with_cwd
 map cmd+t new_tab_with_cwd
 map cmd+enter new_window_with_cwd
 confirm_os_window_close 1
+
+shell /usr/local/bin/fish
