--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -22,7 +22,7 @@ font_family      DejaVu Sans Mono with Numderline
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_size 18.0
 
 #: Font size (in pts)
 
@@ -1079,29 +1079,8 @@ macos_option_as_alt left
 # }}}
 
 # include ./theme.conf
-#include ~/.config/kitty/kitty-themes/themes/Monokai_Soda.conf
-
-background #191919
-foreground #c4c4b5
-cursor #f6f6ec
-selection_background #343434
-color0 #191919
-color8 #615e4b
-color1 #f3005f
-color9 #f3005f
-color2 #97e023
-color10 #97e023
-color3 #fa8419
-color11 #dfd561
-color4 #9c64fe
-color12 #9c64fe
-color5 #f3005f
-color13 #f3005f
-color6 #57d1ea
-color14 #57d1ea
-color7 #c4c4b5
-color15 #f6f6ee
-selection_foreground #191919
+include ~/.config/kitty/kitty-themes/themes/DimmedMonokai.conf
+#include ~/.config/kitty/kitty-themes/themes/Solarized_Light.conf
 
 map kitty_mod+t new_tab_with_cwd
 map kitty_mod+enter new_window_with_cwd
