clean up git, add verbose = true for diff if commit message, fix fish path

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1088,4 +1088,4 @@ map cmd+t new_tab_with_cwd
 map cmd+enter new_window_with_cwd
 confirm_os_window_close 1
 
-shell /usr/local/bin/fish
+shell /opt/homebrew/bin/fish
