--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -22,7 +22,7 @@ font_family      DejaVu Sans Mono with Numderline
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 18.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -1088,4 +1088,4 @@ map cmd+t new_tab_with_cwd
 map cmd+enter new_window_with_cwd
 confirm_os_window_close 1
 
-shell /opt/homebrew/bin/fish
+shell /usr/bin/fish
